--- a/examples/package.json
+++ b/examples/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build-web": "cd web && webpack --mode=production",
-    "test-web":  "http-server ./web/dist/ -c-1 -o"
+    "test-web": "http-server ./web/dist/ -c-1 -o"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,11 @@
   "dependencies": {
     "@tangle-js/anchors": "0.9.2-beta18",
     "@tangle-js/ld-proofs": "0.9.5-beta10",
-    "epcis2.js": "^2.1.0",
     "buffer": "^6.0.3",
-    "node-fetch": "^2.6.1"
+    "copy-webpack-plugin": "^11.0.0",
+    "epcis2.js": "^2.1.0",
+    "node-fetch": "^2.6.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "webpack": "^5.72.0",
